# Scope

./: .dockerignore  2026-04-23-a股-buffett-桌面选股程序-设计规格.md  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  findings.md  package-lock.json  package.json  progress.md  render.yaml  start.bat  task.md  task_plan.md  停止Scope.cmd  停止Scope.vbs  启动Scope.cmd  启动Scope.vbs
.cache/: business_logic.txt  business_sample.txt  concept-map.json  daily-predict-2026-06-03.json  daily-predict-2026-06-04.json  daily-predict-enriched.json  fetch_err.txt  fetch_log.txt  fetch_output.json  fetch_v6_log.txt  industry-map.json  invest_logic.txt  invest_sample.txt  limitup-progress.json  predict-result.json  raw_payload.json  scope-server.pid  technicals-cache.json  test-focus.json  test-focus2.json  test3.json  test5.json  test_err.txt  test_output.json
.claude/: settings.local.json
public/: app.js  index.html  start.html  styles.css
reference/: 雪球特別版——段永平投質問答錄(商業邏輯篇) (雪球專刊) (段永平 [段永平]) (z-library.sk, 1lib.sk, z-lib.sk).epub  雪球特別版——段永平投質問答錄（投資邏輯篇） (雪球專刊) (雪球专刊) (段永平 [段永平]) (z-library.sk, 1lib.sk, z-lib.sk).epub
scripts/: build_concept_map.py  daily_predict.bat  daily_predict.py  expand_profiles.cjs  fetch_limitup_akshare.py  fetch_limitup_history.py  fetch_live_snapshot.py  fetch_stock_history.py  launch_scope.ps1  prefetch.py  prefetch_industry.py  stop_scope.ps1
shared/: data-service.md  handoff-claude-to-codex.md  handoff-codex-to-claude.md  investment-philosophy.md  project-context.md
src/: server.js
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conceptAdapter.test.js  (+9 more)
(+15 files in other folders)
