[package]
name = "scope_buffett_app"
version = "0.1.0"
description = "Scope Buffett A-share desktop app"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
